Fix separator lines cutting off in Activity view caused by inline-flex shrinking (#23980).
git-svn-id: https://svn.redmine.org/redmine/trunk@23133 e93f8b46-1217-0410-a6f0-8f06a7374b81

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -728,6 +728,7 @@ div#activity h3 {
 div#activity dt {
   padding-top: 10px;
   border-top: 1px solid #eeeeee;
+  width: 100%; /* Prevents border from disappearing due to inline-flex shrinking */
 }
 div#activity dl dt:first-child {
   border: 0px;
